tests/NormalTests/paczka1/fuzzy1/41570858.err
Error in line 1: knAG A276 81,2
Error in line 27: sazM6Ynhy A276 -2,7
Error in line 25: sazM6Ynhy A276 44,2
Error in line 29: hY1 S934 68,4
